# rust-learning-1

./: Cargo.toml  README.md
src/: main.rs
src/router/: mod.rs  routes.rs
src/ui/: landing.rs  mod.rs  not_found.rs  page.rs
