[package]
name = "ratatui-blog"
version = "0.1.0"
description = "An example generated using the simple-async template"
authors = ["Malchior95 <malchior95@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.44", features = ["full"] }
async-trait="0.1.88"
